# amaru-client

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  metrics.rs  otel.rs
