[package]
name = "amaru-client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
opentelemetry-proto = "0.31.0"
prost = "0.14.3"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tonic = "0.14.2"
